@@ -12,10 +12,10 @@
     <artifactId>interaction-commands-mule</artifactId>
     <packaging>jar</packaging>
     <name>interaction-commands-mule</name>
-    <description>TODO</description>
+    <description>Transform interaction requests into mule flow requests.</description>
 
     <properties>
-        <mule.version>3.3.1</mule.version>
+        <mule.version>3.6.1</mule.version>
     </properties>
 
     <build>
@@ -104,29 +104,11 @@
    </dependencies>
 
     <repositories>
-<!-- 
-        <repository> 
-            <id>mule-deps</id> 
-            <name>Mule Dependencies</name> 
-            <url>http://dist.codehaus.org/mule/dependencies/maven2</url> 
-        </repository> 
         <repository>
-            <id>ibeans-releases</id>
-            <name>ibeans Release Repository</name>
-            <url>http://repository.ibeans.muleforge.org</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <id>mulesoft-releases</id>
+            <name>MuleSoft Releases</name>
+            <url>http://repository.mulesoft.org/releases/</url>
         </repository>
-        <repository>
-            <id>ibeans-snapshots</id>
-            <name>ibeans Snapshots Repository</name>
-            <url>http://snapshots.repository.ibeans.muleforge.org</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
- -->
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -139,4 +121,96 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
+    <!-- SONAR TEST COVERAGE PROFILE-->
+   <profiles>
+    <profile>
+        <id>coverage</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.13</version>
+                    <configuration>
+                        <argLine>${jacoco.agent.ut.arg}</argLine>
+                        <!-- Specific to generate mapping between tests and covered code -->
+                        <properties>
+                            <property>
+                                <name>listener</name>
+                                <value>org.sonar.java.jacoco.JUnitListener</value>
+                            </property>
+                        </properties>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.16</version>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}</argLine>
+                        <!-- Specific to generate mapping between tests and covered code -->
+                        <properties>
+                            <property>
+                                <name>listener</name>
+                                <value>org.sonar.java.jacoco.JUnitListener</value>
+                            </property>
+                        </properties>
+                        <!-- Let's put failsafe reports with surefire to have access to tests failures/success reports in sonar -->
+                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
+                    <executions>
+                        <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info to be passed to the JVM hosting the code
+being tested. -->
+                        <execution>
+                            <id>prepare-ut-agent</id>
+                            <phase>process-test-classes</phase>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <destFile>${sonar.jacoco.reportPath}</destFile>
+                                <propertyName>jacoco.agent.ut.arg</propertyName>
+                                <append>true</append>
+                            </configuration>
+                        </execution>
+                        <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info to be passed to the JVM hosting the code
+being tested. -->
+                        <execution>
+                            <id>prepare-it-agent</id>
+                            <phase>pre-integration-test</phase>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <destFile>${sonar.jacoco.itReportPath}</destFile>
+                                <propertyName>jacoco.agent.it.arg</propertyName>
+                                <append>true</append>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+        <dependencies>
+            <dependency>
+                <groupId>org.codehaus.sonar-plugins.java</groupId>
+                <artifactId>sonar-jacoco-listeners</artifactId>
+                <version>${sonar-jacoco-listeners.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.sonar-plugins.java</groupId>
+                <artifactId>sonar-jacoco-plugin</artifactId>
+                <version>${sonar-jacoco-plugin.version}</version>
+            </dependency>
+        </dependencies>
+    </profile>
+</profiles>
+    
 </project>
